styles(components): create and fix components styles

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -6,7 +6,8 @@
     gap: 20px;
     color: white;
     height: 15dvh;
-    background-color: #7ab8ff;
+    background: rgb(131, 220, 156);
+    background: linear-gradient(90deg, rgba(131, 220, 156, 1) 0%, rgba(83, 132, 172, 1) 100%);
 }
 
 .header-icon {
