--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -5,5 +5,6 @@
     align-items: center;
     color: white;
     height: 15dvh;
-    background-color: #7ab8ff;
+    background: rgb(255, 120, 13);
+    background: linear-gradient(90deg, rgba(255, 120, 13, 1) 0%, rgba(255, 246, 95, 1) 100%);
 }
