--- a/src/components/content/content.css
+++ b/src/components/content/content.css
@@ -1,20 +1,22 @@
 .content-container {
     width: 100%;
-}
-
-
-.list-container {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    margin: 0 auto;
+    padding-bottom: 30px;
 }
 
-@media only screen and (max-width: 1000px) {
-    .search-container {
-        width: 100%;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: flex-start;
-        height: auto;
-        padding-bottom: 20px;
+@media only screen and (max-width: 1450px) {
+    .content-container {
+        width: 700px;
+        gap: 100px;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .content-container {
+        width: 450px;
+        gap: 100px;
     }
 }
