--- a/src/components/searchBar/searchbar.css
+++ b/src/components/searchBar/searchbar.css
@@ -2,16 +2,14 @@
 .search-container {
     display: grid;
     grid-template-rows: auto 1fr;
-    height: 90px;
     gap: 10px;
-    border-bottom: 1px solid #e1e4e8;
-    padding-bottom: 10px;
+    margin: 0 auto;
 }
 
 
 /* Base style for search input */
 .search-input {
-    width: 100%;
+    width: 600px;
     min-width: 200px;
     padding: 5px 10px;
     border: 1px solid #d1d5da;
@@ -19,13 +17,13 @@
     font-size: 16px;
     background-color: #f6f8fa;
     color: #24292e;
-    transition: border 0.3s;
+    transition: border 0.3s, box-shadow 0.3s;
 }
 
 /* Style for input focus */
 .search-input:focus {
     outline: none;
-    border-color: #0366d6;
+    border-color: #83dc9c;
     box-shadow: 0 0 0 3px rgba(3, 102, 214, 0.1);
 }
 
@@ -34,7 +32,6 @@
     list-style: none;
     display: flex;
     gap: 15px;
-    padding-left: 10px;
 }
 
 .dropdown-item {
@@ -56,4 +53,23 @@
     background-color: #f59648;
     color: #fff;
     border-color: #fff;
+}
+
+.dropdown-error {
+    display: inline-block;
+    padding: 5px 10px;
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    border: 2px solid #83dc9c;
+    color: #000000;
+    background-color: #aba9a9;
+    border-radius: 5px;
+}
+
+@media only screen and (max-width: 800px) {
+    .search-input {
+        width: 450px;
+    }
 }
