--- a/src/pages/mainpage.css
+++ b/src/pages/mainpage.css
@@ -1,16 +1,9 @@
 .main-container {
     display: flex;
     gap: 35px;
-    max-width: 1200px;
-    min-height: 70dvh;
+    max-width: 1400px;
+    min-height: 80dvh;
     margin: 0 auto;
-    padding: 20px 30px;
+    padding: 20px 0;
 
-}
-
-@media only screen and (max-width: 780px) {
-    .main-container {
-        flex-direction: column;
-        gap: 20px;
-    }
 }
