--- a/src/components/items/list/list.css
+++ b/src/components/items/list/list.css
@@ -3,18 +3,28 @@
     grid-template-columns: repeat(auto-fill, minmax(calc((100% - 150px) / 6), 1fr));
     gap: 30px;
     justify-content: center;
+    padding: 40px 40px 50px;
     overflow-y: scroll;
     scrollbar-width: none;
 }
 
-@media only screen and (max-width: 1450px) {
+@media only screen and (max-width: 1500px) {
     .list-container {
         grid-template-columns: repeat(auto-fill, minmax(calc((100% - 60px) / 3), 1fr));
+        max-width: 800px;
     }
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 820px) {
     .list-container {
         grid-template-columns: repeat(auto-fill, minmax(calc((100% - 60px) / 2), 1fr));
+        max-width: 530px;
+    }
+}
+
+@media only screen and (max-width: 550px) {
+    .list-container {
+        grid-template-columns: repeat(auto-fill, minmax(calc((100% - 60px) / 1), 1fr));
+        max-width: 380px;
     }
 }
