--- a/src/components/searchBar/searchbar.css
+++ b/src/components/searchBar/searchbar.css
@@ -9,7 +9,7 @@
 
 /* Base style for search input */
 .search-input {
-    width: 600px;
+    width: 720px;
     min-width: 200px;
     padding: 5px 10px;
     border: 1px solid #d1d5da;
@@ -68,8 +68,14 @@
     border-radius: 5px;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 820px) {
     .search-input {
         width: 450px;
+    }
+}
+
+@media only screen and (max-width: 550px) {
+    .search-input {
+        width: 100%;
     }
 }
