--- a/src/pages/mainpage.css
+++ b/src/pages/mainpage.css
@@ -1,9 +1,9 @@
 .main-container {
     display: flex;
     gap: 35px;
-    max-width: 1400px;
+    max-width: 1500px;
     min-height: 80dvh;
     margin: 0 auto;
-    padding: 20px 0;
+    padding-top: 30px;
 
 }
