--- a/src/components/items/card/card.css
+++ b/src/components/items/card/card.css
@@ -1,24 +1,82 @@
-.card-container {
-    height: calc(80dvh - 200px);
-    width: 200px;
+.card {
+    background-color: white;
+    font-family: "Oxygen", sans-serif;
+    color: #050505;
+    box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
     display: flex;
     flex-direction: column;
-    align-items: center;
-    text-align: center;
-    gap: 15px;
-    background-color: rgba(102, 166, 166, 0.6);
-    padding: 20px 15px;
+    max-width: 212px;
     overflow: hidden;
-    border-radius: 4px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -ms-border-radius: 4px;
-    -o-border-radius: 4px;
+    border-radius: 0.25rem;
+    -webkit-border-radius: 0.25rem;
+    -moz-border-radius: 0.25rem;
+    -ms-border-radius: 0.25rem;
+    -o-border-radius: 0.25rem;
 }
 
-.image {
-    height: 150px;
-    width: 150px;
+.card_image {
+    position: relative;
+    max-height: 250px;
+}
+
+.card_image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card_content {
+    position: relative;
+    padding: 0 10px 15px 20px;
+    margin: 16px 8px 8px 0;
+    max-height: 290px;
+    overflow-y: scroll;
+}
+
+.card_content::-webkit-scrollbar {
+    width: 2px;
+}
+
+.card_content::-webkit-scrollbar-thumb {
+    background-color: #ffa92d;
+    border-radius: 15px;
+    transition: background-color 0.5s;
+    -webkit-transition: background-color 0.5s;
+    -moz-transition: background-color 0.5s;
+    -ms-transition: background-color 0.5s;
+    -o-transition: background-color 0.5s;
+}
+
+.card_content:hover::-webkit-scrollbar-thumb {
+    background-color: #ff780d;
+
+}
+
+.card_title {
+    position: relative;
+    margin: 0 0 24px;
+    padding-bottom: 20px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.card_title::after {
+    position: absolute;
+    display: block;
+    width: 50px;
+    height: 2px;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #ffa92d;
+    content: "";
+}
+
+hr {
+    margin: 24px auto;
+    width: 50px;
+    border-top: 2px solid #ffa92d;
 }
 
 .ingredients-container {
@@ -37,5 +95,21 @@
 }
 
 .instructions {
-    text-align: left;
+    font-size: 14px;
+}
+
+.card_text p {
+    margin: 0 0 4px;
+
+    line-height: 1.5;
+}
+
+.card_text p:last-child {
+    margin: 0;
+}
+
+@media only screen and (max-width: 550px) {
+    .card {
+        max-width: 270px;
+    }
 }
