--- a/src/components/content/content.css
+++ b/src/components/content/content.css
@@ -16,7 +16,7 @@
 
 @media only screen and (max-width: 820px) {
     .content-container {
-        width: 550px;
+        width: 100%;
         align-items: center;
         gap: 40px;
     }
@@ -24,7 +24,7 @@
 
 @media only screen and (max-width: 550px) {
     .content-container {
-        width: 400px;
+
         align-items: center;
         gap: 30px;
     }
